--- a/maze-game/style.css
+++ b/maze-game/style.css
@@ -2,6 +2,43 @@
     box-sizing: border-box;
 }
 
+body {
+    font: 16px Arial, sans-serif;
+    line-height: 1.5;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-size: 1.5rem;
+    line-height: 1.2;
+}
+
+dialog {
+    width: min(100%, 300px);
+    padding: 10px;
+    border: 1px solid black;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+}
+
+dialog::backdrop {
+    background-color: transparent;
+}
+
+dialog>div:last-of-type {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+    padding-top: 5px;
+}
+
+dialog>div:last-of-type>button {
+    flex: 1;
+}
+
 #game {
     image-rendering: pixelated;
     /* outline: 1px solid black; */
