change font and add fps counter

--- a/src/style.css
+++ b/src/style.css
@@ -4,8 +4,18 @@
 
 body {
     margin: 0;
-    font: 16px Arial, sans-serif;
+    font: 16px monospace, monospace;
     line-height: 1.5;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
 }
 
 h1,
