--- a/src/style.css
+++ b/src/style.css
@@ -1,34 +1,22 @@
-* {
+*,
+*::before,
+*::after {
     box-sizing: border-box;
 }
 
+html {
+    height: 100%;
+    -webkit-text-size-adjust: 100%;
+}
+
 body {
+    height: 100%;
     margin: 0;
-    font: 16px monospace, monospace;
-    line-height: 1.5;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-    margin: 0;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-size: 1.5rem;
-    line-height: 1.2;
 }
 
 #game {
-    image-rendering: pixelated;
-    width: min(100%, 400px);
+    display: block;
+    width: 100%;
+    height: 100%;
+    /* image-rendering: pixelated; */
 }
